--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   animated_text_kit: ^4.2.2
   intl: ^0.18.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
@@ -22,3 +23,4 @@ flutter:
   assets:
     - image/logo.png
     - image/logo_name.png
+    - image/imagepix.png
